# vb-objects

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  maxmspsdk.xcconfig  package-info.json.in
help/: vb.FFTWbuf~.maxhelp  vb.allpole~.maxhelp  vb.aubio~.maxhelp  vb.blit~.maxhelp  vb.brown~.maxhelp  vb.cheby~.maxhelp  vb.evolution~.maxhelp  vb.fbosc2~.maxhelp  vb.fbosc~.maxhelp  vb.fourses~.maxhelp  vb.freezer~.maxhelp  vb.gbuzz~.maxhelp  vb.gcd_lcm.maxhelp  vb.goertzel~.maxhelp  vb.linCongru~.maxhelp  vb.listchange.maxhelp  vb.phasor0~.maxhelp  vb.ramp~.maxhelp  vb.rand~.maxhelp  vb.sigi~.maxhelp  vb.simper.svf~.maxhelp  vb.src~.maxhelp  vb.thresh~.maxhelp
source/libs/: build_aubio.sh  build_fftw.sh  build_libsamplerate.sh  build_taglib.sh
source/projects/vb.FFTWbuf_tilde/: CMakeLists.txt  vb.FFTWbuf_tilde.c
source/projects/vb.allpole_tilde/: CMakeLists.txt  vb.allpole_tilde.c
source/projects/vb.aubio_tilde/: CMakeLists.txt  vb.aubio_tilde.c
source/projects/vb.aubio~/: vb.aubio~.maxhelp
source/projects/vb.fbosc2_tilde/: CMakeLists.txt  vb.fbosc2_tilde.c
source/projects/vb.listdrunk/: CMakeLists.txt  vb.listdrunk.c
source/projects/vb.src_tilde/: CMakeLists.txt  vb.src_tilde.c
vb.FFTWbuf~/vb.FFTWbuf~.xcodeproj/: project.pbxproj
vb.aubio~/: vb.aubio~.c  vb.aubio~.maxhelp
vb.aubio~/aubio.framework/: aubio
vb.aubio~/vb.aubio~.xcodeproj/: project.pbxproj
vb.blit~/: vb.blit~.maxhelp
vb.blit~/vb.blit~.xcodeproj/: project.pbxproj
vb.brown~/vb.brown~.xcodeproj/: project.pbxproj
vb.cheby~/: vb.cheby~.c
vb.cheby~/vb.cheby~.xcodeproj/: project.pbxproj
vb.fbosc2~/: vb.fbosc2~.c
vb.fbosc2~/vb.fbosc2~.xcodeproj/: project.pbxproj
vb.fbosc~/: vb.fbosc~.c
vb.fbosc~/vb.fbosc~.xcodeproj/: project.pbxproj
vb.fourses~/: vb.fourses~.c
vb.fourses~/vb.fourses~.xcodeproj/: project.pbxproj
vb.freezer~/: vb.freezer~.c
vb.gbuzz~/vb.gbuzz~.xcodeproj/: project.pbxproj
vb.goertzel~/: vb.goertzel~.maxhelp
vb.goertzel~/vb.goertzel~.xcodeproj/: project.pbxproj
vb.jonverb~/: vb.jonverb~.c  vb.jonverb~.h  vb.jonverb~.maxhelp
vb.jonverb~/vb.jonverb~.xcodeproj/: project.pbxproj
vb.listchange/: vb.listchange.c
vb.listchange/vb.listchange.xcodeproj/: project.pbxproj
vb.listdrunk/: vb.listdrunk.c  vb.listdrunk.maxhelp
vb.listdrunk/vb.listdrunk.xcodeproj/: project.pbxproj
vb.metatag/: README.md  vb.metatag.cpp  vb.metatag.maxhelp
vb.metatag/vb.metatag.xcodeproj/: project.pbxproj
vb.ramp~/: vb.ramp~.c
vb.ramp~/vb.ramp~.xcodeproj/: project.pbxproj
vb.rand~/: vb.rand~.c  vb.rand~.maxhelp
vb.rand~/vb.rand~.xcodeproj/: project.pbxproj
vb.simper.svf~/: vb.simper.svf~.maxhelp
vb.simper.svf~/vb.simper.svf~.xcodeproj/: project.pbxproj
vb.src~/vb.src~.xcodeproj/: project.pbxproj
vb.thresh~/: vb.thresh~.maxhelp
vb.thresh~/vb.thresh~.xcodeproj/: project.pbxproj
vb.vinylcontrol~/: timecoder.c  timecoder.h  vb.vinylcontrol2~.maxhelp  vb.vinylcontrol~.maxhelp  vinylcontrol_sig~.c  vinylcontrol~.c
vb.vinylcontrol~/vb.vinylcontrol~.xcodeproj/: project.pbxproj
(+120 files in other folders)
